add details screen

--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -28,69 +28,81 @@
 		<div class="main_content">
 			<h1>New tastes with discount 20%</h1>
 			<div class="item">
-				<div class="imageview">
-					<img src="/restaurant/img/1-cahoisongthaihatluu.jpg">
-				</div>
-				<div class="bg">
-					<div class="textview">
-						Salmon tartar with mellow goat chesse &amp; pink pepper corn, dry fruits &amp; herbs dressing
+				<a href="/restaurant/items/details/gastronomique.html">
+					<div class="imageview">
+						<img src="/restaurant/img/1-cahoisongthaihatluu.jpg">
 					</div>
-				</div>
+					<div class="bg">
+						<div class="textview">
+							Salmon tartar with mellow goat chesse &amp; pink pepper corn, dry fruits &amp; herbs dressing
+						</div>
+					</div>
+				</a>
 			</div>
 			<div class="item">
-				<div class="imageview">
-					<img src="/restaurant/img/2-Canguphubotnuonggionvoivung.jpg">
-				</div>
-				<div class="bg">
-					<div class="textview">
-						Crusted red tuna with thyme &amp; sesame, mushroom &amp; asparagus risotto in wasabi, ginger red   wine sauce												
+				<a href="/restaurant/items/details/gastronomique.html">
+					<div class="imageview">
+						<img src="/restaurant/img/2-Canguphubotnuonggionvoivung.jpg">
 					</div>
-				</div>
+					<div class="bg">
+						<div class="textview">
+							Crusted red tuna with thyme &amp; sesame, mushroom &amp; asparagus risotto in wasabi, ginger red   wine sauce												
+						</div>
+					</div>
+				</a>
 			</div>
 			<div class="item">
-				<div class="imageview">
-					<img src="/restaurant/img/4-banhtiramisuY.jpg">
-				</div>
-				<div class="bg">
-					<div class="textview">
-						Salmon tartar with mellow goat chesse &amp; pink pepper corn, dry fruits &amp; herbs dressing
+				<a href="/restaurant/items/details/gastronomique.html">
+					<div class="imageview">
+						<img src="/restaurant/img/4-banhtiramisuY.jpg">
 					</div>
-				</div>
+					<div class="bg">
+						<div class="textview">
+							Salmon tartar with mellow goat chesse &amp; pink pepper corn, dry fruits &amp; herbs dressing
+						</div>
+					</div>
+				</a>
 			</div>
 			<div class="item">
-				<div class="imageview">
-					<img src="/restaurant/img/5-Ca-vuoc-tamgiavinuongsotbochanh.jpg">
-				</div>
-				<div class="bg">
-					<div class="textview">
-						Tiramisu with chestnut cream in Amaretto liquor, crispy chocolate
+				<a href="/restaurant/items/details/gastronomique.html">
+					<div class="imageview">
+						<img src="/restaurant/img/5-Ca-vuoc-tamgiavinuongsotbochanh.jpg">
 					</div>
-				</div>
+					<div class="bg">
+						<div class="textview">
+							Tiramisu with chestnut cream in Amaretto liquor, crispy chocolate
+						</div>
+					</div>
+				</a>
 			</div>
 			<div class="item">
-				<div class="imageview">
-					<img src="/restaurant/img/6-banhchancuu-Mille-feuille.jpg">
-				</div>
-				<div class="bg">
-					<div class="textview">
-						Sea bass  meunière in spices, pumpkin salad &amp; citrus
+				<a href="/restaurant/items/details/gastronomique.html">
+					<div class="imageview">
+						<img src="/restaurant/img/6-banhchancuu-Mille-feuille.jpg">
 					</div>
-				</div>
+					<div class="bg">
+						<div class="textview">
+							Sea bass  meunière in spices, pumpkin salad &amp; citrus
+						</div>
+					</div>
+				</a>
 			</div>
 			<div class="item">
-				<div class="imageview">
-					<img src="/restaurant/img/7-SodiepnuongMyY.jpg">
-				</div>
-				<div class="bg">
-					<div class="textview">
-						Pan-fried scallops, seafood lasagna with mushrooms &amp; vegetables, saffron emulsion
+				<a href="/restaurant/items/details/gastronomique.html">
+					<div class="imageview">
+						<img src="/restaurant/img/7-SodiepnuongMyY.jpg">
 					</div>
-				</div>
+					<div class="bg">
+						<div class="textview">
+							Pan-fried scallops, seafood lasagna with mushrooms &amp; vegetables, saffron emulsion
+						</div>
+					</div>
+				</a>
 			</div>
 		</div>
 		<div id="footer">
 			<p>
-				Au Delice & Le Restaurant d'Arthur - 2B Ngo Thi Nham st., Hanoi - Vietnam</br></br>
+				Au Delice &amp; Le Restaurant d'Arthur - 2B Ngo Thi Nham st., Hanoi - Vietnam</br></br>
 
 				Reservation call (04) 39449288 - 0904150383 - Fax: (04) 39449289
 			</p>
