--- a/restaurant/items/desserts.html
+++ b/restaurant/items/desserts.html
@@ -33,11 +33,13 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Flan caramel
+					<a href="/restaurant/items/details/desserts1.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Flan caramel
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 
@@ -47,11 +49,13 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Ice cream with warm chocolate
+					<a href="/restaurant/items/details/desserts2.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Ice cream with warm chocolate
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 
@@ -61,11 +65,13 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Banana with chocolate
+					<a href="/restaurant/items/details/desserts3.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Banana with chocolate
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 
@@ -75,11 +81,13 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Apple tart with ice cream
+					<a href="/restaurant/items/details/desserts4.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Apple tart with ice cream
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 
@@ -89,11 +97,13 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Tart of the day with ice cream and chocolate
+					<a href="/restaurant/items/details/desserts5.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Tart of the day with ice cream and chocolate
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 
@@ -103,17 +113,19 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Profiteroles with ice cream and chocolate
+					<a href="/restaurant/items/details/desserts6.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Profiteroles with ice cream and chocolate
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 		</div>
 		<div id="footer">
 			<p>
-				Au Delice & Le Restaurant d'Arthur - 2B Ngo Thi Nham st., Hanoi - Vietnam</br></br>
+				Au Delice &amp; Le Restaurant d'Arthur - 2B Ngo Thi Nham st., Hanoi - Vietnam</br></br>
 
 				Reservation call (04) 39449288 - 0904150383 - Fax: (04) 39449289
 			</p>
