--- a/restaurant/items/starter.html
+++ b/restaurant/items/starter.html
@@ -33,11 +33,13 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Delicatessen cold cut platter
+					<a href="/restaurant/items/details/starter1.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Delicatessen cold cut platter
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 
@@ -47,11 +49,13 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Smoked salmon with brie cheese
+					<a href="/restaurant/items/details/starter2.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Smoked salmon with brie cheese
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 
@@ -61,11 +65,13 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Parma ham with melon (Seasonal)
+					<a href="/restaurant/items/details/starter3.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Parma ham with melon (Seasonal)
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 
@@ -75,11 +81,13 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Salmon Carpaccio
+					<a href="/restaurant/items/details/starter4.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Salmon Carpaccio
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 
@@ -89,11 +97,13 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Beef Carpaccio
+					<a href="/restaurant/items/details/starter5.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Beef Carpaccio
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 
@@ -103,17 +113,19 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Our sampler plate of smoked salmon, charcuterie and cheese
+					<a href="/restaurant/items/details/starter6.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Our sampler plate of smoked salmon, charcuterie and cheese
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 		</div>
 		<div id="footer">
 			<p>
-				Au Delice & Le Restaurant d'Arthur - 2B Ngo Thi Nham st., Hanoi - Vietnam</br></br>
+				Au Delice &amp; Le Restaurant d'Arthur - 2B Ngo Thi Nham st., Hanoi - Vietnam</br></br>
 
 				Reservation call (04) 39449288 - 0904150383 - Fax: (04) 39449289
 			</p>
