--- a/restaurant/about.html
+++ b/restaurant/about.html
@@ -51,7 +51,7 @@
 	</div>
 	<div id="footer">
 		<p>
-			Au Delice & Le Restaurant d'Arthur - 2B Ngo Thi Nham st., Hanoi - Vietnam</br></br>
+			Au Delice &amp; Le Restaurant d'Arthur - 2B Ngo Thi Nham st., Hanoi - Vietnam</br></br>
 
 			Reservation call (04) 39449288 - 0904150383 - Fax: (04) 39449289
 		</p>
