--- a/restaurant/items/main-course.html
+++ b/restaurant/items/main-course.html
@@ -33,11 +33,13 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Jumbo Crab meat &amp; beef fillet mignon
+					<a href="/restaurant/items/details/main-course1.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Jumbo Crab meat &amp; beef fillet mignon
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 
@@ -47,11 +49,13 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Beef rib-eyes “beef cube roll”
+					<a href="/restaurant/items/details/main-course2.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Beef rib-eyes “beef cube roll”
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 
@@ -61,11 +65,13 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Beef strip-loin
+					<a href="/restaurant/items/details/main-course3.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Beef strip-loin
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 
@@ -75,11 +81,13 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Grilled T-Bone steak
+					<a href="/restaurant/items/details/main-course4.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Grilled T-Bone steak
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 
@@ -89,11 +97,13 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Lamb chops
+					<a href="/restaurant/items/details/main-course5.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Lamb chops
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 
@@ -103,17 +113,19 @@
 				</div>
 
 				<div class="bg">
-					<div class="msg-wrap">
-						<div class="msg">
-							Local beef fillet
+					<a href="/restaurant/items/details/main-course6.html">
+						<div class="msg-wrap">
+							<div class="msg">
+								Local beef fillet
+							</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 		</div>
 		<div id="footer">
 			<p>
-				Au Delice & Le Restaurant d'Arthur - 2B Ngo Thi Nham st., Hanoi - Vietnam</br></br>
+				Au Delice &amp; Le Restaurant d'Arthur - 2B Ngo Thi Nham st., Hanoi - Vietnam</br></br>
 
 				Reservation call (04) 39449288 - 0904150383 - Fax: (04) 39449289
 			</p>
