implement cals function

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -15,12 +15,14 @@
 
 		<div class="keys">
 			<!-- operators and other keys -->
-			<span>√</span>
-			<span>x<sup>y</sup></span>
-			<span>%</span>
-			<span>(</span>
-			<span>)</span>
-			<span>x!</span>
+			<span class="operatorExtend">2<sup>x</sup></span>
+			<span class="operatorExtend">x<sup>3</sup></span>
+			<span class="operatorExtend"><sup>2</sup>√</span>
+			<span class="operator">x<sup>2</sup></span>
+			<span class="operatorExtend">(</span>
+			<span class="operatorExtend">)</span>
+			<span class="operatorExtend">%</span>
+			<span class="operator">x!</span>
 			<span>7</span>
 			<span>8</span>
 			<span>9</span>
