--- a/calculator/index.html
+++ b/calculator/index.html
@@ -9,36 +9,35 @@
 	<div id="calculator">
 		<!-- Screen and clear key -->
 		<div class="top">
-			<span class="clear">C</span>
 			<div class="screen"></div>
 		</div>
 
 		<div class="keys">
 			<!-- operators and other keys -->
-			<span class="operatorExtend">2<sup>x</sup></span>
-			<span class="operatorExtend">x<sup>3</sup></span>
-			<span class="operatorExtend"><sup>2</sup>√</span>
-			<span class="operator">x<sup>2</sup></span>
-			<span class="operatorExtend">(</span>
-			<span class="operatorExtend">)</span>
-			<span class="operatorExtend">%</span>
-			<span class="operator">x!</span>
+			<span class="clear">C</span>
+			<span class="operator">x<sup>3</sup></span>
+			<span class="operator"><sup>2</sup>√</span>
+			<span class="operator toRight">x<sup>2</sup></span>
+			<span class="operator">(</span>
+			<span class="operator">)</span>
+			<span class="operator">%</span>
+			<span class="operator toRight">x!</span>
 			<span>7</span>
 			<span>8</span>
 			<span>9</span>
-			<span class="operator">+</span>
+			<span class="operator toRight">+</span>
 			<span>4</span>
 			<span>5</span>
 			<span>6</span>
-			<span class="operator">-</span>
+			<span class="operator toRight">-</span>
 			<span>1</span>
 			<span>2</span>
 			<span>3</span>
-			<span class="operator">÷</span>
+			<span class="operator toRight">÷</span>
 			<span>0</span>
 			<span>.</span>
 			<span class="eval">=</span>
-			<span class="operator">x</span>
+			<span class="operator toRight">x</span>
 		</div>
 	</div>
 
