--- a/quiz/index.html
+++ b/quiz/index.html
@@ -12,7 +12,8 @@
    			<br/>
   			<div class='quiz'></div>
     		<div class='button' id='next' onclick="goNext()"><a href='#'>Next</a></div>
-    		<div class='button' id='prev' onclick="goPreview()"><a href='#'>Prev</a></div>
+    		<div class='button' id='prev' onclick="goPreview()"><a href='#'>Preview</a></div>
+    		<div class='button' id='replay' onclick="goRePlay()"><a href='#'>Replay</a></div>
     	</div>
 
 		<script type='text/javascript' src='js/javascripts.js'></script>
