--- a/quiz/congratulation.html
+++ b/quiz/congratulation.html
@@ -6,9 +6,11 @@
 	<link type='text/css' rel='stylesheet' href='css/congrat.css'/>
 </head>
 <body>
+	<img id="balloons-left" src="img/balloons.png" alt="balloons.png" title="Balloons Left"/>
 	<div id="content">
 		<h1>Congratulation!</h1>
 		<p>You passed with highest score!</p>
 	</div>
+	<img id="balloons-right" src="img/balloons.png" alt="balloons.png" title="Balloons Right"/>
 </body>
 </html>
