--- a/quiz/index.html
+++ b/quiz/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Dynamic Quiz Project</title>
+		<title>Math Quiz</title>
 		<link type='text/css' rel='stylesheet' href='css/style.css'/>
 	</head>
 	<body>
