--- a/game-card/example.html
+++ b/game-card/example.html
@@ -8,6 +8,16 @@
 <body>
 	<div class="wrap">
 		<div class="content">
+			<div class="grid">
+				<div class="card">
+					<div class="back">
+						<img src="img/back.gif" alt="back.gif" title="Back"/>
+					</div>
+					<div class="front">
+						<img src="img/JC.gif" alt="JC.gif" title="JC"/>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
