--- a/game-card/example.html
+++ b/game-card/example.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<title>Game Card</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css" media="all">
 </head>
 <body>
 	<div class="wrap">
@@ -22,5 +22,8 @@
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script src='js/javascript.js'></script>
+	<audio autoplay>
+  			<source src="assets/nice.mp3" type="audio/mpeg">
+	</audio>
 </body>
 </html>
