--- a/game-card/index.html
+++ b/game-card/index.html
@@ -12,5 +12,16 @@
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script src='js/javascript.js'></script>
+	<audio autoplay>
+  			<source src="assets/nice.mp3" type="audio/mpeg">
+	</audio>
+	<audio id="incorrect-sound">
+    	<source src="assets/incorrect.mp3" type="audio/mpeg">
+	</audio>
+
+	<audio id="correct-sound">
+    	<source src="assets/correct.mp3" type="audio/mpeg">
+	</audio>
+
 </body>
 </html>
