--- a/game-card/index.html
+++ b/game-card/index.html
@@ -59,5 +59,9 @@
     	<source src="assets/congratulations.mp3" type="audio/mpeg">
 	</audio>
 
+	<audio id="lose-sound">
+    	<source src="assets/lose.mp3" type="audio/mpeg">
+	</audio>
+
 </body>
 </html>
