--- a/game-card/index.html
+++ b/game-card/index.html
@@ -19,7 +19,7 @@
 	<div class="modal begin">
 	    <div class="dialog">
 	        <h1>Game Card</h1>
-	        <button class="btn btn-start" onclick="startGame()">Normal</button>
+	        <button class="btn btn-start" onclick="startGame()">Start</button>
 	    </div>
 	</div>
 
