--- a/game-card/index.html
+++ b/game-card/index.html
@@ -25,15 +25,16 @@
 
 	<div class="modal win">
 	    <div class="dialog">
+	    	<img src="img/winner.jpg" alt="winner.jpg" title="Winner">
 	        <h1>
-	        	You are win<br/>
-	        	<button class="btn btn-reset" onclick="displayCard()">Play again</button>
+	        	You are win
 	        </h1>
 	    </div>
 	</div>
 
 	<div class="modal lose">
 	    <div class="dialog">
+	    	<img src="img/lose.jpg" alt="lose.jpg" title="Lose">
 	        <h1>
 	            Time over <br/>
 	            <button class="btn btn-reset" onclick="displayCard()">Play again</button>
