--- a/restaurant/items/starter.html
+++ b/restaurant/items/starter.html
@@ -7,6 +7,7 @@
 	<meta charset="utf-8"/>
 	<link href="/restaurant/css/style.css" rel="stylesheet" type="text/css"/>
 	<link href="/restaurant/css/menu.css" rel="stylesheet" type="text/css"/>
+	<link href="/restaurant/css/font-awesome.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 	<div class="wrapper">
@@ -125,9 +126,9 @@
 		</div>
 		<div id="footer">
 			<p>
-				Au Delice &amp; Le Restaurant d'Arthur - 2B Ngo Thi Nham st., Hanoi - Vietnam</br></br>
+				<i class="fa fa-home"></i> Au Delice &amp; Le Restaurant d'Arthur - 2B Ngo Thi Nham st., Hanoi - Vietnam</br></br>
 
-				Reservation call (04) 39449288 - 0904150383 - Fax: (04) 39449289
+				<i class="fa fa-phone"></i> Reservation call (04) 39449288 - 0904150383 - Fax: (04) 39449289
 			</p>
 		</div>
 	</div>
