add icon in contact page

--- a/restaurant/contact.html
+++ b/restaurant/contact.html
@@ -32,16 +32,16 @@
 			<h2>Au Délice & Le Restaurant d'Arthur</h2></br>
 
 			<p>
-				<b>Add:</b>	<span>2B Ngo Thi Nham st., Hanoi - Vietnam</span></br>
-				<b>Reservation call:</b>	<span>(04) 39449288 - 0904150383</span></br>
-				<b>Fax:</b>	<span>(04) 39449289</span></br>
-				<b>Email:</b>	<span>info@au-delice.com - au-delice@vnn.vn</span></br></br>
-				<b>Le Restaurant d'Arthur Operation:</b></br>
+				<i class="fa fa-home"></i> <b>Add:</b>	<span>2B Ngo Thi Nham st., Hanoi - Vietnam</span></br>
+				<i class="fa fa-phone"></i> <b>Reservation call:</b>	<span>(04) 39449288 - 0904150383</span></br>
+				<i class="fa fa-fax"></i> <b>Fax:</b>	<span>(04) 39449289</span></br>
+				<i class="fa fa-envelope-o"></i> <b>Email:</b>	<span>info@au-delice.com - au-delice@vnn.vn</span></br></br>
+				<i class="fa fa-calendar"></i> <b>Le Restaurant d'Arthur Operation:</b></br>
 				<b>Lunch:</b>	<span>10:00-14:00</span></br>
 				<b>Dinner:</b>	<span>17:30 - 22:00</span></br></br>
 			</p>
 			<p>
-				<b>Au Délice Operation:</b></br>
+				<i class="fa fa-calendar"></i> <b>Au Délice Operation:</b></br>
 				<b>Mon-Sat:</b>	<span>8:00-22:00</span></br>
 				<b>Sunday:</b>	<span>9:00-22:00</span></br>
 			</p>
