--- a/form/index.html
+++ b/form/index.html
@@ -1,23 +1,48 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
 	<title>Login</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<form>
-		<label for="email">Email</label><br/>
+	<div id="register">
+		<h1><label for="name">Register form</label><br/></h1>
+		<form action="result.html">
 
-		<input type="email" name="Email" id="email"/><br/>
-		
-		<label for="password">Password</label><br/>
-		
-		<input type="password" name="Password" id="password"/><br/>
-		
-		<input type="checkbox" name="Remember" id="remember" /><label for="remember">Remember Login</label><br/>
-		
-		<input type="submit" value="Log in">
-	</form>
+			<input type="text" name="name" id="name" placeholder="Full Name" /><br/>
+
+			<input type="email" name="email" id="email" placeholder="Email" /><br/>
+					
+			<input type="password" name="password" id="password" placeholder="Password" /><br/>
+
+			<input type="text" name="address" id="address" placeholder="Address" /><br/>
+
+			<input type="text" name="phone" id="phone" placeholder="Phone" /><br/>
+
+			<select name="year" id="year">
+				<option>Select year of birth..</option>
+				<option value="1985">1985</option>
+				<option value="1986">1986</option>
+				<option value="1987">1987</option>
+				<option value="1988">1988</option>
+				<option value="1989">1989</option>
+				<option value="1990">1990</option>
+				<option value="1991">1991</option>
+				<option value="1992">1992</option>
+				<option value="1993">1993</option>
+			</select>
+			<br/>
+
+			<div id="gender">
+				<input type="radio" name="gender" id="male" value="male"/><label for="male">Male</label>
+				<input type="radio" name="gender" id="female" value="female"/><label for="female">Female</label>
+			</div>
+			<br/>
+			
+			<input class="btn login" type="submit" value="Log in">
+		</form>
+	</div>
+
 </body>
 </html>
