--- a/form/index.html
+++ b/form/index.html
@@ -8,17 +8,22 @@
 <body>
 	<div id="register">
 		<h1><label for="name">Register form</label><br/></h1>
-		<form action="result.html">
+		<form action="result.html" id="form-register">
 
-			<input type="text" name="name" id="name" placeholder="Full Name" /><br/>
+			<input type="text" name="name" id="name" placeholder="Name"/>
+			<span class="error"></span><br/>
 
-			<input type="email" name="email" id="email" placeholder="Email" /><br/>
+			<input type="text" name="email" id="email" placeholder="Email"/>
+			<span class="error"></span><br/>
 					
-			<input type="password" name="password" id="password" placeholder="Password" /><br/>
+			<input type="password" name="password" id="password" placeholder="Password"/>
+			<span class="error"></span><br/>
 
 			<input type="text" name="address" id="address" placeholder="Address" /><br/>
 
 			<input type="text" name="phone" id="phone" placeholder="Phone" /><br/>
+
+			<input type="text" name="facebook" id="facebook" placeholder="Facebook" /><br/>
 
 			<select name="year" id="year">
 				<option>Select year of birth..</option>
@@ -43,6 +48,7 @@
 			<input class="btn login" type="submit" value="Log in">
 		</form>
 	</div>
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script type="text/javascript" src="js/validate.js"></script>
 </body>
 </html>
