add html structure

--- a/html-structure/index.html
+++ b/html-structure/index.html
@@ -10,10 +10,8 @@
 		<p>Báo điện tử hàng đầu Việt Nam</p>
 	</header>
 	<nav>
-		<a href="http://vnexpress.net/tin-tuc/thoi-su">Thời sự</a>
-		<a href="http://vnexpress.net/tin-tuc/the-gioi">Thế </a>
-		<a href="http://kinhdoanh.vnexpress.net/">Kinh Doanh
-		<a href="http://sohoa.vnexpress.net/">Số hoá</a>
+		<a href="#content">Content</a>
+		<a href="#image">Image</a>
 	</nav>
 	<div id="content">
 		<article>
@@ -27,7 +25,7 @@
 			<p>Phát hiện sự việc, tài xế Phan Văn Bắc khéo léo điều khiển xe tải chạy cùng tốc độ để đuôi xe tiếp xúc với mũi ôtô khách, dìu phương tiện này xuống hết đoạn dốc khoảng 500 m trên đèo Bảo Lộc cho đến khi cả hai dừng lại an toàn.</p>
 		</article>
 		<aside>
-			<img src="http://img.f29.vnecdn.net/2016/09/08/14248777-1057067124406823-1901-2965-1732-1473304825.jpg"/>
+			<img id="image" src="img/driver.jpg"/>
 		</aside>
 	</div>
 	<footer>
