--- a/bootstrap-galery/about.html
+++ b/bootstrap-galery/about.html
@@ -82,7 +82,7 @@
 		</article>
 
 	</section>
-	<footer>
+	<footer class="container">
 		<div id="footer">
 			<p>Copyright &copy; 2016</p>
 		</div>
