--- a/bootstrap-galery/galery.html
+++ b/bootstrap-galery/galery.html
@@ -84,7 +84,7 @@
 			</div>
 		</div>
 	</section>
-	<footer>
+	<footer class="container">
 		<div id="footer">
 			<p>Copyright &copy; 2016</p>
 		</div>
