--- a/bootstrap-galery/index.html
+++ b/bootstrap-galery/index.html
@@ -39,7 +39,7 @@
 	<section class="container">
 		Home Page
 	</section>
-	<footer>
+	<footer class="container">
 		<div id="footer">
 			<p>Copyright &copy; 2016</p>
 		</div>
