--- a/restaurant-bootstrap/items/desserts.html
+++ b/restaurant-bootstrap/items/desserts.html
@@ -5,132 +5,167 @@
 		Welcome to ABD restaurant!
 	</title>
 	<meta charset="utf-8"/>
-	<link href="/restaurant/css/style.css" rel="stylesheet" type="text/css"/>
-	<link href="/restaurant/css/menu.css" rel="stylesheet" type="text/css"/>
-	<link href="/restaurant/css/font-awesome.css" rel="stylesheet" type="text/css"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link href="/restaurant-bootstrap/css/font-awesome.css" rel="stylesheet" type="text/css"/>
+	<link href="/restaurant-bootstrap/css/style.css" rel="stylesheet" type="text/css"/>
+	<link href="/restaurant-bootstrap/css/menu.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-	<div class="wrapper">
-		<div class="main_menu">
-			<ul>
-				<li><a href="/restaurant/index.html">Home</a></li>
-				<li><a href="/restaurant/about.html">About</a></li>
-				<li><a href="">Menu</a>
-					<ul>
-						<li><a href="/restaurant/items/starter.html">Starter</a></li>
-						<li><a href="/restaurant/items/main-course.html">Main Course</a></li>
-						<li><a href="/restaurant/items/desserts.html">Desserts</a></li>
+	<header class="container">
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li><a href="/restaurant-bootstrap/index.html">Home</a></li>
+						<li><a href="/restaurant-bootstrap/about.html">About </a></li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="/restaurant-bootstrap/items/starter.html">Starter </a></li>
+								<li role="separator" class="divider"></li>
+								<li><a href="/restaurant-bootstrap/items/main-course.html">Main Course </a></li>
+								<li role="separator" class="divider"></li>
+								<li><a href="/restaurant-bootstrap/items/desserts.html">Desserts </a></li>
+							</ul>
+						</li>
+						<li><a href="/restaurant-bootstrap/contact.html">Contact </a></li>
 					</ul>
-				</li>
-				<li><a href="/restaurant/contact.html">Contact</a></li>
-			</ul>
-			<div class="clear"></div>
-		</div>
-		<div class="main_content">
-			<h1>Desserts</h1>
-			<div class="cell">
-				<div class="thumb">
-					<img src="/restaurant/img/Flan-caramel.png" alt="Flan-caramel.png" title="Flan caramel" />
-				</div>
+				</div><!-- /.navbar-collapse -->
+			</div><!-- /.container-fluid -->
+		</nav>
+	</header>
+	<section class="container">
+		<h1>Desserts</h1>
+		<div class="row">
+			<div class="col-xs-12 col-sm-12 col-md-4">
+				<div class="cell">
+					<div class="thumb">
+						<img src="/restaurant-bootstrap/img/Flan-caramel.png" alt="Flan-caramel.png" title="Flan caramel" />
+					</div>
 
-				<div class="bg">
-					<a href="/restaurant/items/details/desserts1.html">
-						<div class="msg-wrap">
-							<div class="msg">
-								Flan caramel
+					<div class="bg">
+						<a href="/restaurant-bootstrap/items/details/desserts1.html">
+							<div class="msg-wrap">
+								<div class="msg">
+									Flan caramel
+								</div>
 							</div>
-						</div>
-					</a>
+						</a>
+					</div>
 				</div>
 			</div>
+			<div class="col-xs-12 col-sm-12 col-md-4">
+				<div class="cell">
+					<div class="thumb">
+						<img src="/restaurant-bootstrap/img/Ice-cream-with-warm-chocolate.jpg" alt="Ice-cream-with-warm-chocolate.jpg" title="Ice cream with warm chocolate" />
+					</div>
 
-			<div class="cell">
-				<div class="thumb">
-					<img src="/restaurant/img/Ice-cream-with-warm-chocolate.jpg" alt="Ice-cream-with-warm-chocolate.jpg" title="Ice cream with warm chocolate" />
-				</div>
-
-				<div class="bg">
-					<a href="/restaurant/items/details/desserts2.html">
-						<div class="msg-wrap">
-							<div class="msg">
-								Ice cream with warm chocolate
+					<div class="bg">
+						<a href="/restaurant-bootstrap/items/details/desserts2.html">
+							<div class="msg-wrap">
+								<div class="msg">
+									Ice cream with warm chocolate
+								</div>
 							</div>
-						</div>
-					</a>
+						</a>
+					</div>
 				</div>
 			</div>
+			<div class="col-xs-12 col-sm-12 col-md-4">
+				<div class="cell">
+					<div class="thumb">
+						<img src="/restaurant-bootstrap/img/Banana-chocolate.jpg" alt="Banana-chocolate.jpg" title="Banana with chocolate" />
+					</div>
 
-			<div class="cell">
-				<div class="thumb">
-					<img src="/restaurant/img/Banana-chocolate.jpg" alt="Banana-chocolate.jpg" title="Banana with chocolate" />
-				</div>
-
-				<div class="bg">
-					<a href="/restaurant/items/details/desserts3.html">
-						<div class="msg-wrap">
-							<div class="msg">
-								Banana with chocolate
+					<div class="bg">
+						<a href="/restaurant-bootstrap/items/details/desserts3.html">
+							<div class="msg-wrap">
+								<div class="msg">
+									Banana with chocolate
+								</div>
 							</div>
-						</div>
-					</a>
-				</div>
-			</div>
-
-			<div class="cell">
-				<div class="thumb">
-					<img src="/restaurant/img/Apple-tart-ice-cream.jpg" alt="Apple-tart-ice-cream.jpg" title="Apple tart with ice cream" />
-				</div>
-
-				<div class="bg">
-					<a href="/restaurant/items/details/desserts4.html">
-						<div class="msg-wrap">
-							<div class="msg">
-								Apple tart with ice cream
-							</div>
-						</div>
-					</a>
-				</div>
-			</div>
-
-			<div class="cell">
-				<div class="thumb">
-					<img src="/restaurant/img/Tart-ice-cream-chocolate.jpg" alt="Tart-ice-cream-chocolate.jpg" title="Tart of the day with ice cream and chocolate" />
-				</div>
-
-				<div class="bg">
-					<a href="/restaurant/items/details/desserts5.html">
-						<div class="msg-wrap">
-							<div class="msg">
-								Tart of the day with ice cream and chocolate
-							</div>
-						</div>
-					</a>
-				</div>
-			</div>
-
-			<div class="cell">
-				<div class="thumb">
-					<img src="/restaurant/img/Profiteroles-ice-cream-chocolate.jpg" alt="Profiteroles-ice-cream-chocolate.jpg" title="Profiteroles with ice cream and chocolate" />
-				</div>
-
-				<div class="bg">
-					<a href="/restaurant/items/details/desserts6.html">
-						<div class="msg-wrap">
-							<div class="msg">
-								Profiteroles with ice cream and chocolate
-							</div>
-						</div>
-					</a>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
-		<div id="footer">
-			<p>
-				<i class="fa fa-home"></i> Au Delice &amp; Le Restaurant d'Arthur - 2B Ngo Thi Nham st., Hanoi - Vietnam</br></br>
+		<div class="row">
+			<div class="col-xs-12 col-sm-12 col-md-4">
+				<div class="cell">
+					<div class="thumb">
+						<img src="/restaurant-bootstrap/img/Apple-tart-ice-cream.jpg" alt="Apple-tart-ice-cream.jpg" title="Apple tart with ice cream" />
+					</div>
 
-				<i class="fa fa-phone"></i> Reservation call (04) 39449288 - 0904150383 - Fax: (04) 39449289
-			</p>
+					<div class="bg">
+						<a href="/restaurant-bootstrap/items/details/desserts4.html">
+							<div class="msg-wrap">
+								<div class="msg">
+									Apple tart with ice cream
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-4">
+				<div class="cell">
+					<div class="thumb">
+						<img src="/restaurant-bootstrap/img/Tart-ice-cream-chocolate.jpg" alt="Tart-ice-cream-chocolate.jpg" title="Tart of the day with ice cream and chocolate" />
+					</div>
+
+					<div class="bg">
+						<a href="/restaurant-bootstrap/items/details/desserts5.html">
+							<div class="msg-wrap">
+								<div class="msg">
+									Tart of the day with ice cream and chocolate
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-4">
+				<div class="cell">
+					<div class="thumb">
+						<img src="/restaurant-bootstrap/img/Profiteroles-ice-cream-chocolate.jpg" alt="Profiteroles-ice-cream-chocolate.jpg" title="Profiteroles with ice cream and chocolate" />
+					</div>
+
+					<div class="bg">
+						<a href="/restaurant-bootstrap/items/details/desserts6.html">
+							<div class="msg-wrap">
+								<div class="msg">
+									Profiteroles with ice cream and chocolate
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
+			</div>
 		</div>
-	</div>
+	</section>
+	<footer class="container">
+		<p>
+			<i class="fa fa-home"></i> Au Delice &amp; Le Restaurant d'Arthur - 2B Ngo Thi Nham st., Hanoi - Vietnam</br></br>
+
+			<i class="fa fa-phone"></i> Reservation call (04) 39449288 - 0904150383 - Fax: (04) 39449289
+		</p>
+	</footer>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
