--- a/minimo/index.html
+++ b/minimo/index.html
@@ -98,7 +98,7 @@
 	<section class="container-fluid">
 		<h2>Sign up for our newsletter!</h2>
 		<input type="email" name="email" placeholder="Enter a valid email address">
-		<button id="send-email" type="submit"><img src="img/send.png"></button>
+		<button id="send-mail" type="submit"><img src="img/send.png"></button>
 	</section>
 	<section class="container">
 		<div class="row">
