--- a/minimo/index.html
+++ b/minimo/index.html
@@ -137,7 +137,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6">
 				<div id="footer-right">
-					<a href="">Follow</a>
+					Follow
 					&emsp;
 					<a href=""><i class="fa fa-facebook"></i></a>
 					<a href=""><i class="fa fa-twitter"></i></a>
